Documentation sync 2025-09-23: Updated project READMEs and latest changes